test/pending/neg/bug452.check
bug452.scala:3: error: type mismatch;
 found   : Test
 required: Test.this.Foo
    def this() = this(this);
                      ^
one error found
